# stm32-f103c8t6-HAL

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  stm32-f103c8t6-HAL.ioc
Core/Src/: main.c
cmake/: common.cmake  toolchain.cmake
docs/: debug_connect.md
